# HF-Advanced-Fine-Tuning

./: .gitignore  .pmat-metrics.toml  .pmatignore  CITATION.cff  CLAUDE.md  Makefile  README.md
.github/workflows/: ci.yml
.pmat/: project.toml
brick/: brick.toml  profile.sh
corpus/: Cargo.toml  Makefile  demo.json  demo_model.safetensors  environment.toml  requirements-train.txt  rust-toolchain.toml  train.py  train.yaml
corpus/.pmat/: project.toml
corpus/checkpoints/: final_model.json
corpus/data/corpus/: README.md  environment.toml  train.jsonl  train.parquet  train_lm.jsonl  train_numeric.parquet  train_small.jsonl  train_snappy.parquet  train_text.jsonl  train_tokenized.parquet
corpus/data/review/: review_sample.md
corpus/models/: README.md  qwen2.5-coder-1.5b-config.json  qwen2.5-coder-1.5b-tokenizer.json
corpus/src/: entry.rs  error.rs  extractor.rs  filter.rs  lib.rs  publisher.rs  schema.rs  validator.rs
corpus/tests/: falsification_tests.rs  property_tests.rs
corpus/training/: qwen-rustdoc-quick.yaml  qwen-rustdoc-scaled.yaml  qwen-rustdoc.yaml  save-test.yaml  tiny-test.yaml
demos/: Cargo.toml  Makefile  README.md
demos/week1/: Cargo.toml
demos/week1/src/: attention.rs  bpe_vs_word.rs  feed_forward.rs  inference_pipeline.rs  lib.rs  scalar_simd_gpu.rs  training_vs_inference.rs
demos/week2/: Cargo.toml
demos/week2/src/: cli_help.rs  eval_cli_help.rs  full_finetune_cost.rs  inference_trace.rs  kernel_overhead_bench.rs  lib.rs  lora_math.rs  lora_merge.rs  lora_rank.rs  qlora.rs
docs/: course-introduction-resources.md  final-project-challenge.md  outline.md
docs/scripts/: corpus-code-architecture-svg-demo.md  corpus-code-demo.md  corpus-pipeline-demo.md  fine-tuning-pipeline-demo.md  rust-cli-corpus-demo.md  week2-cheatsheet-demo.md
docs/specifications/: gpu-acceleration-strategy.md  inference-tracing-support.md  rust-cli-docs-corpus.md
labs/: itp-ent-tiny.yaml  qwen2.5-coder-1.5b-finetune.yaml  tiny_model_config.json  tiny_train_data.json
scripts/: svg-lint.sh
